working on context switching

--- a/kernel/arch/x86/idt/idt.S.in
+++ b/kernel/arch/x86/idt/idt.S.in
@@ -6,13 +6,12 @@
 
 idt_common:
     cld
+    addq $8, %rsp
 	pushq %rax
-    movq 8(%rsp), %rax
+    movq -0x10(%rsp), %rax
     pushq %rbx
     pushq %rcx
     pushq %rdx
-    pushq %rsp
-    pushq %rbp
     pushq %rsi
     pushq %rdi
     pushq %r8
@@ -23,10 +22,32 @@ idt_common:
     pushq %r13
     pushq %r14
     pushq %r15
+
+    // setup stack frame
     pushq %rbp
     movq %rsp, %rbp
+
+    // parameters
     movq %rax, %rsi
     movq %rbp, %rdi
 	call *idt_handler_entries(%rax)
+
+    popq %rbp
+    popq %r15
+    popq %r14
+    popq %r13
+    popq %r12
+    popq %r11
+    popq %r10
+    popq %r9
+    popq %r8
+    popq %rdi
+    popq %rsi
+    popq %rdx
+    popq %rcx
+    popq %rbx
+    popq %rax
+    subq $0x18, %rsp
+    iretq
 
 idt_entry_start:
