Trying to fix compile issues

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "kernel/libimpl/memory-allocator"]
 	path = kernel/libimpl/memory-allocator
 	url = https://github.com/FloweyTheFlower420/memory-allocator/
+[submodule "libimpl/memory-allocator"]
+	path = libimpl/memory-allocator
+	url = https://github.com/FloweyTheFlower420/memory-allocator/
