--- a/arch/x86/idt/idt.S.in
+++ b/arch/x86/idt/idt.S.in
@@ -7,24 +7,48 @@
 idt_common:
     cld
     pushq %rax
-    movq 0x10(%rsp), %rax
     pushq %rbx
-    pushq %rcx
-    pushq %rdx
-    pushq %rsi
-    pushq %rdi
-    pushq %r8
-    pushq %r9
-    pushq %r10
-    pushq %r11
-    pushq %r12
-    pushq %r13
-    pushq %r14
-    pushq %r15
-    pushq %rbp
+    movq 0x10(%rsp), %rax
 
-    movq %rsp, %rdi
-    andq $~0x7, %rsp
+    swapgs
+
+    movq %gs:0, %rbx
+    movq (%rbx), %rbx
+    
+    // save the other registers
+    movq %rcx, (0x28 + 0x8 * 2)(%rbx)
+    // use cx to save ax
+    popq %rcx
+    movq %rcx, (0x28 + 0x8 * 1)(%rbx)
+    popq %rcx
+    movq %rcx, (0x28 + 0x8 * 0)(%rbx) 
+    movq %rdx, (0x28 + 0x8 * 3)(%rbx)
+    movq %rsi, (0x28 + 0x8 * 4)(%rbx)
+    movq %rdi, (0x28 + 0x8 * 5)(%rbx)
+    movq %r8, (0x28 + 0x8 * 6)(%rbx)
+    movq %r9, (0x28 + 0x8 * 7)(%rbx)
+    movq %r10, (0x28 + 0x8 * 8)(%rbx)
+    movq %r11, (0x28 + 0x8 * 9)(%rbx)
+    movq %r12, (0x28 + 0x8 * 10)(%rbx)
+    movq %r13, (0x28 + 0x8 * 11)(%rbx)
+    movq %r14, (0x28 + 0x8 * 12)(%rbx)
+    movq %r15, (0x28 + 0x8 * 13)(%rbx)
+    movq %rbp, (0x28 + 0x8 * 14)(%rbx)
+
+    movq (%rbp), %rcx
+    movq %rcx, 0x20(%rbx)
+
+    movq 0x8(%rbp), %rcx
+    movq %rcx, 0x18(%rbx)
+
+    movq 0x10(%rbp), %rcx
+    movq %rcx, 0x10(%rbx)
+
+    movq 0x18(%rbp), %rcx
+    movq %rcx, 0x8(%rbx)
+
+    movq 0x20(%rbp), %rcx
+    movq %rcx, 0(%rbx)
 
     // setup stack frame
     pushq %rbp
@@ -33,7 +57,7 @@ idt_common:
     // parameters
     movq %rax, %rsi
     movq %rbp, %rdi
-    call *idt_handler_entries(%rax)
+    call *idt_handler_entries(%rax)1
 
     popq %rbp
     popq %r15
