--- a/arch/x86/idt/idt.S.in
+++ b/arch/x86/idt/idt.S.in
@@ -1,6 +1,5 @@
 .text
 
-.global idt_handler_entries
 .global idt_entry_start
 .global idt_entry_end
 
@@ -62,7 +61,16 @@ idt_common:
     movq 0(%rsp), %rsi
     movq 0x8(%rsp), %rdi
     // idt_handler_entries[%rax](intno, errno)
-    call *idt_handler_entries(%rax)
+
+    // do gs stuff
+    movq %gs:0, %rax
+    movq 8(%rax,%rsi,8), %rax
+
+    call *(%rax)
+
+.L0:
+    hlt
+    jmp .L0
 
     popq %rbp
     popq %r15
