timer workes, implementing scheduler

--- a/meson.build
+++ b/meson.build
@@ -32,25 +32,28 @@ add_project_arguments(
 kernel_source = [
     'arch/common/driver/tty.cpp',
     'arch/x86/idt/idt.cpp',
+    'arch/x86/idt/handlers/div_by_zero.cpp',
+    'arch/x86/idt/handlers/handle_gp.cpp',
+    'arch/x86/idt/handlers/handle_timer.cpp',
     'arch/x86/apic/apic.cpp',
     'arch/x86/kinit/kinit.cpp',
+    'arch/x86/process/process.cpp',
+    'arch/x86/process/scheduler/scheduler.cpp',
+    'arch/x86/mm/pmm.cpp',
+    'arch/x86/mm/mm.cpp',
     'arch/x86/gdt/gdt.cpp',
     'arch/x86/paging/paging.cpp',
     'arch/x86/paging/pgfault.cpp',
-    'arch/x86/mm/mm.cpp',
-    'arch/x86/mm/pmm.cpp',
     'arch/x86/smp/smp.cpp',
-    'arch/x86/idt/handlers/handle_gp.cpp',
     'arch/x86/driver/terminal.cpp',
     'lib/src/cstring.cpp',
     'lib/src/panic.cpp',
     'lib/src/new.cpp',
     'lib/src/backtrace.cpp',
     'libimpl/memory-allocator/linked-list-memory-allocator/extend_alloc.cpp',
-    'arch/x86/idt/handlers/handle_timer.cpp',
     'libimpl/cxxabi.cpp',
     'libimpl/implement.cpp',
-    'arch/x86/idt/idt.S',
+    'arch/x86/idt/idt.S'
 ]
 
 # config
