--- a/meson.build
+++ b/meson.build
@@ -64,11 +64,12 @@ conf.set('ARCH_PATH', '"x86"')
 conf.set('MALLOC_IMPL_PATH', '<libimpl/memory-allocator/linked-list-memory-allocator/alloc.h>')
 conf.set('PMM_COUNT', '0x20')
 conf.set('PRE_ALLOCATE_PAGES', '100')
-
+conf.set('KLOG_PAGES', '64')
 
 conf.set('HHDM_START', '0xffff800000000000')
 conf.set('SCROLLBACK_START', '0xffff900000000000')
 conf.set('HEAP_START', '0xffff900080000000')
+conf.set('KLOG_BUFFER', '0xffffa00000000000')
 
 configure_file(input : 'config.h.in',
                output : 'config.h',
