--- a/config.h.in
+++ b/config.h.in
@@ -22,6 +22,7 @@ using config = ctcfg::config_holder<
     ctcfg::bool_entry<"debug.log.acpi", @DEBUG_LOG_ACPI@>,
     ctcfg::bool_entry<"debug.log.pci", @DEBUG_LOG_PCI@>,
     ctcfg::bool_entry<"debug.lock.spinlock_dep", @DEBUG_SPINLOCK_DEP@>,
+    ctcfg::address_entry<"debug.symtab", @DEBUG_SYMTAB@>,
     ctcfg::size_entry<"slab.min_order", @SLAB_MIN_ORDER@>,
     ctcfg::size_entry<"slab.max_order", @SLAB_MAX_ORDER@>,
     ctcfg::size_entry<"slab.slab_size_order", @SLAB_SIZE_ORDER@>
@@ -30,5 +31,7 @@ using config = ctcfg::config_holder<
 static_assert(config::get_val<"slab.min_order"> <= config::get_val<"slab.max_order">);
 static_assert(config::get_val<"slab.max_order"> <= config::get_val<"slab.slab_size_order">);
 
+#mesondefine COMPILER_GCC
+#mesondefine COMPILER_CLANG
 
 #endif
